--- a/mec-16.2.6-clustering-mini-project/Mini_Project_Clustering.ipynb
+++ b/mec-16.2.6-clustering-mini-project/Mini_Project_Clustering.ipynb
@@ -1309,24 +1309,23 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 21,
+   "execution_count": 22,
    "metadata": {
     "ExecuteTime": {
-     "end_time": "2022-04-10T00:13:22.213906Z",
-     "start_time": "2022-04-10T00:13:22.182391Z"
+     "end_time": "2022-04-10T00:13:38.553526Z",
+     "start_time": "2022-04-10T00:13:38.541558Z"
     }
    },
    "outputs": [
     {
-     "ename": "NameError",
-     "evalue": "name 'plot_pca' is not defined",
-     "output_type": "error",
-     "traceback": [
-      "\u001b[0;31m---------------------------------------------------------------------------\u001b[0m",
-      "\u001b[0;31mNameError\u001b[0m                                 Traceback (most recent call last)",
-      "Input \u001b[0;32mIn [21]\u001b[0m, in \u001b[0;36m<module>\u001b[0;34m\u001b[0m\n\u001b[1;32m      6\u001b[0m \u001b[38;5;66;03m# db_cluster.labels_\u001b[39;00m\n\u001b[1;32m      7\u001b[0m silhouette_score(x_cols, ac_cluster\u001b[38;5;241m.\u001b[39mlabels_)\n\u001b[0;32m----> 9\u001b[0m \u001b[43mplot_pca\u001b[49m(matrix, x_cols, DB)\n",
-      "\u001b[0;31mNameError\u001b[0m: name 'plot_pca' is not defined"
-     ]
+     "data": {
+      "text/plain": [
+       "0.08258017823184984"
+      ]
+     },
+     "execution_count": 22,
+     "metadata": {},
+     "output_type": "execute_result"
     }
    ],
    "source": [
@@ -1336,10 +1335,15 @@
     "db_cluster.fit(x_cols)\n",
     "\n",
     "# db_cluster.labels_\n",
-    "silhouette_score(x_cols, ac_cluster.labels_)\n",
-    "\n",
-    "plot_pca(matrix, x_cols, DB)"
+    "silhouette_score(x_cols, ac_cluster.labels_)\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "metadata": {},
+   "outputs": [],
+   "source": []
   }
  ],
  "metadata": {
